[gd_scene load_steps=84 format=3 uid="uid://dpvbpcrjst6ew"]

[ext_resource type="Script" path="res://player/Freya_Swiftwind.gd" id="1_xox5e"]
[ext_resource type="Texture2D" uid="uid://c5r6j12ctbjp1" path="res://images/Tiny-Swords/Factions/Knights/Troops/Warrior/Purple/Warrior_Purple.png" id="2_0su58"]
[ext_resource type="Texture2D" uid="uid://dcb1m8kw1urpw" path="res://images/Tiny-Swords/Factions/Knights/Troops/Dead/Dead.png" id="3_uihdu"]
[ext_resource type="Script" path="res://scripts/player_scripts/battles.gd" id="4_dji8e"]
[ext_resource type="Script" path="res://scripts/player_scripts/player_status.gd" id="5_exg1g"]
[ext_resource type="Script" path="res://scripts/player_scripts/ai_requests.gd" id="6_4fwwd"]
[ext_resource type="Script" path="res://scripts/player_scripts/play_anim.gd" id="7_omity"]
[ext_resource type="Script" path="res://scripts/market_scripts/currency_manager.gd" id="8_lp0fq"]
[ext_resource type="Script" path="res://scripts/market_scripts/store.gd" id="9_gmrwg"]
[ext_resource type="Script" path="res://scripts/market_scripts/transaction_manager.gd" id="10_5iojt"]
[ext_resource type="Script" path="res://player/ActionManager.gd" id="11_7aycy"]
[ext_resource type="Script" path="res://player/ActionFunctions.gd" id="12_2wdnq"]
[ext_resource type="Script" path="res://player/crafting.gd" id="13_3vssf"]
[ext_resource type="Script" path="res://scripts/notification_scripts/notifications.gd" id="14_h23qr"]
[ext_resource type="Script" path="res://player/AreaDetectionHandler.gd" id="15_rwj6s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sdljw"]
radius = 7.28011

[sub_resource type="AtlasTexture" id="AtlasTexture_mld5j"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4e31"]
atlas = ExtResource("2_0su58")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_suxit"]
atlas = ExtResource("2_0su58")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_olnul"]
atlas = ExtResource("2_0su58")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c5wv"]
atlas = ExtResource("2_0su58")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncdk6"]
atlas = ExtResource("2_0su58")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mvv7"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy67t"]
atlas = ExtResource("2_0su58")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mr28"]
atlas = ExtResource("2_0su58")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vka6k"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcpah"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m6rk"]
atlas = ExtResource("2_0su58")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj8fu"]
atlas = ExtResource("2_0su58")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq8df"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ara2d"]
atlas = ExtResource("2_0su58")
region = Rect2(192, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7173h"]
atlas = ExtResource("2_0su58")
region = Rect2(384, 1344, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_empu3"]
atlas = ExtResource("3_uihdu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q8mr"]
atlas = ExtResource("3_uihdu")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mwwl"]
atlas = ExtResource("3_uihdu")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cot5p"]
atlas = ExtResource("3_uihdu")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm8r1"]
atlas = ExtResource("3_uihdu")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hx8y"]
atlas = ExtResource("3_uihdu")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xggqc"]
atlas = ExtResource("3_uihdu")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkq8x"]
atlas = ExtResource("3_uihdu")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7q3w"]
atlas = ExtResource("3_uihdu")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_asdha"]
atlas = ExtResource("3_uihdu")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b3jy"]
atlas = ExtResource("3_uihdu")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjojd"]
atlas = ExtResource("3_uihdu")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa3c8"]
atlas = ExtResource("3_uihdu")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0el8"]
atlas = ExtResource("3_uihdu")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_llytm"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eveu"]
atlas = ExtResource("2_0su58")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ookrp"]
atlas = ExtResource("2_0su58")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6ad0"]
atlas = ExtResource("2_0su58")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dxcv"]
atlas = ExtResource("2_0su58")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w28ob"]
atlas = ExtResource("2_0su58")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfaa4"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8jm1"]
atlas = ExtResource("2_0su58")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m4jj"]
atlas = ExtResource("2_0su58")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbe6d"]
atlas = ExtResource("2_0su58")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyqg5"]
atlas = ExtResource("2_0su58")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rljg6"]
atlas = ExtResource("2_0su58")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4o1h"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qylxp"]
atlas = ExtResource("2_0su58")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cfw6"]
atlas = ExtResource("2_0su58")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iodd6"]
atlas = ExtResource("2_0su58")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_odvmg"]
atlas = ExtResource("2_0su58")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_umool"]
atlas = ExtResource("2_0su58")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s1an"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s537d"]
atlas = ExtResource("2_0su58")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxssh"]
atlas = ExtResource("2_0su58")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsser"]
atlas = ExtResource("2_0su58")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygmke"]
atlas = ExtResource("2_0su58")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1tyr"]
atlas = ExtResource("2_0su58")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_64y1o"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_67g6m"]
atlas = ExtResource("2_0su58")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pys7u"]
atlas = ExtResource("2_0su58")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqua0"]
atlas = ExtResource("2_0su58")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k18rl"]
atlas = ExtResource("2_0su58")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuiqf"]
atlas = ExtResource("2_0su58")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm7er"]
atlas = ExtResource("2_0su58")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvxiv"]
atlas = ExtResource("2_0su58")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_okie2"]
atlas = ExtResource("2_0su58")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqn0b"]
atlas = ExtResource("2_0su58")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_olk4n"]
atlas = ExtResource("2_0su58")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmdi4"]
atlas = ExtResource("2_0su58")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_ul8hp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mld5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4e31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suxit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olnul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c5wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncdk6")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mvv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy67t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mr28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vka6k")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcpah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m6rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj8fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq8df")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ara2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7173h")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_empu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q8mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mwwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cot5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm8r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hx8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xggqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkq8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7q3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asdha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b3jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjojd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa3c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0el8")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_llytm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eveu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ookrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6ad0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dxcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w28ob")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfaa4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8jm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m4jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbe6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyqg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rljg6")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4o1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qylxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cfw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iodd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odvmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umool")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s1an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s537d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxssh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsser")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygmke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1tyr")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64y1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67g6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pys7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqua0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k18rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuiqf")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm7er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvxiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okie2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqn0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olk4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmdi4")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g5j4u"]

[node name="player" type="CharacterBody2D"]
position = Vector2(-3, 35)
collision_layer = 7
collision_mask = 7
script = ExtResource("1_xox5e")

[node name="Label" type="Label" parent="."]

offset_left = 5.0
offset_top = -19.0
offset_right = 151.0
offset_bottom = 7.00001

scale = Vector2(0.362991, 0.362991)
text = "Freya Swiftwind"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

position = Vector2(2, -2)
shape = SubResource("CircleShape2D_sdljw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0.999992)
scale = Vector2(0.408854, 0.317708)

sprite_frames = SubResource("SpriteFrames_ul8hp")
animation = &"side_idle"
frame_progress = 0.469693

[node name="player_hitbox" type="Area2D" parent="."]

position = Vector2(1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, 1.00001)
scale = Vector2(1.29908, 1.36403)
shape = SubResource("CircleShape2D_g5j4u")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="world_camera" type="Camera2D" parent="."]
position = Vector2(0, -1)
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 900
limit_bottom = 600
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="cliffside_camera" type="Camera2D" parent="."]
position = Vector2(0, -2)
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 100000
limit_bottom = 1000
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0.188235, 0.67451, 0, 1)

offset_left = 10.0
offset_top = -11.0
offset_right = 175.0
offset_bottom = 16.0

scale = Vector2(0.2, 0.2)
fill_mode = 1
show_percentage = false

[node name="battle_status" type="Node" parent="."]
script = ExtResource("4_dji8e")

[node name="player_status" type="Node" parent="."]
script = ExtResource("5_exg1g")

[node name="ai_requests" type="Node" parent="."]
script = ExtResource("6_4fwwd")

[node name="play_anim" type="Node" parent="."]
script = ExtResource("7_omity")

[node name="CurrencyManager" type="Node" parent="."]
script = ExtResource("8_lp0fq")

[node name="Store" type="Node" parent="."]
script = ExtResource("9_gmrwg")

[node name="TransactionManager" type="Node" parent="."]
script = ExtResource("10_5iojt")

[node name="AreaDetectionHandler" type="Node" parent="."]
script = ExtResource("15_rwj6s")

[node name="ActionManager" type="Node" parent="."]
script = ExtResource("11_7aycy")

[node name="ActionFunctions" type="Node" parent="."]
script = ExtResource("12_2wdnq")

[node name="Crafting" type="Node" parent="."]
script = ExtResource("13_3vssf")

[node name="Notifications" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("14_h23qr")

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
